--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage.html
@@ -18,16 +18,20 @@
                 <th>
                     <wicket:message key="finance.account"></wicket:message>
                 </th>
-
+                <th>
+                    <wicket:message key="finance.account.reverse"></wicket:message>
+                </th>
             </tr>
             <tr>
                 <td><input class="span2" wicket:id="name" id="name" type="text"/></td>
                 <td><input class="span2" wicket:id="percentage" id="percentage" type="number"/></td>
                 <td><input class="span2" wicket:id="financeAccount" id="financeAccount" type="hidden"/></td>
+                <td><input class="span2" wicket:id="financeAccountReverse" id="financeAccountReverse" type="hidden"/>
+                </td>
 
             </tr>
             <tr>
-                <td colspan="3">
+                <td colspan="4">
                     <input wicket:id="save" class="btn btn-success" type="submit" value="save"/>
                     <input wicket:id="new" class="btn btn-info" type="submit" value="new"/>
                     <input wicket:id="delete" class="btn btn-danger" type="submit" value="delete"/>
