#77: Bookkeepingpage needs VAT on reverse account

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.html
@@ -58,7 +58,7 @@
                         <td><input class="span2" wicket:id="bookingNumber" id="bookingNumber" type="number"/></td>
                         <td><input class="span2" wicket:id="reverseFinanceAccount" id="reverseFinanceAccount"
                                    type="hidden"/></td>
-                        <td></td>
+                        <td><select class="span2" wicket:id="reverseVatType" id="reverseVatType"/></td>
                         <td><input class="span2" wicket:id="text" id="text" type="text"/></td>
                     </tr>
 
