#93: All pages with validation. Required fields feedback names are incorrect

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage.html
@@ -35,10 +35,10 @@
             </tr>
             <tr>
                 <td>
-                    <wicket:message key="AccountFrom"></wicket:message>
+                    <wicket:message key="accountFrom"></wicket:message>
                 </td>
                 <td>
-                    <wicket:message key="AccountTo"></wicket:message>
+                    <wicket:message key="accountTo"></wicket:message>
                 </td>
             </tr>
             <tr>
