#95: ChartOfAccountsPage hide labels sumfrom and sumto togheter with account choosers

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.html
@@ -35,15 +35,13 @@
             </tr>
             <tr>
                 <td colspan="3"></td>
-                <td><wicket:message key="sum.from"></wicket:message></td>
-                <td><wicket:message key="sum.to"></wicket:message></td>
-                <td></td>
+                <td><span wicket:id="sumFromLabel"></span></td>
+                <td><span wicket:id="sumToLabel"></span></td>
             </tr>
             <tr>
                 <td colspan="3"></td>
                 <td><select class="span2" wicket:id="sumFrom" id="sumFrom"/></td>
                 <td><select class="span2" wicket:id="sumTo" id="sumTo"/></td>
-                <td></td>
             </tr>
             <tr>
                 <td colspan="5">
