--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/BalancePage.html
@@ -28,28 +28,30 @@
                 <td>
                     <wicket:message key="dateTo"></wicket:message>
                 </td>
+                <td><wicket:message key="compare.to"></wicket:message></td>
             </tr>
             <tr>
                 <td><input class="span2" wicket:id="dateFrom" id="dateFrom" type="text"/></td>
                 <td><input class="span2" wicket:id="dateTo" id="dateTo" type="text"/></td>
+                <td><select wicket:id="reportCompareType"></select></td>
             </tr>
             <tr>
                 <td>
                     <wicket:message key="accountFrom"></wicket:message>
                 </td>
-                <td>
+                <td colspan="2">
                     <wicket:message key="accountTo"></wicket:message>
                 </td>
             </tr>
             <tr>
                 <td><input class="span2" wicket:id="accountFrom" id="accountFrom" type="hidden"/></td>
-                <td><input class="span2" wicket:id="accountTo" id="accountTo" type="hidden"/></td>
+                <td colspan="2"><input class="span2" wicket:id="accountTo" id="accountTo" type="hidden"/></td>
             </tr>
             <tr>
-                <td colspan="2"></td>
+                <td colspan="3"></td><br>
             </tr>
             <tr>
-                <td colspan="2">
+                <td colspan="3">
                     <input wicket:id="refresh" class="btn btn-success" type="submit" value="save"/>
                 </td>
             </tr>
