#80: Ability to choose standard reverse account in dailyledger

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage.html
@@ -28,6 +28,15 @@
                 <input wicket:id="nextBookingNumber" id="nextBookingNumber" type="text"/>
             </div>
         </div>
+        <div class="control-group">
+            <label class="control-label" for="financeAccount">
+                <wicket:message key="financeAccount"></wicket:message>
+            </label>
+
+            <div class="controls">
+                <select wicket:id="financeAccount" id="financeAccount" type="text"/>
+            </div>
+        </div>
 
         <div class="control-group">
             <div class="controls">
