#119: Remember me not working after restart

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/LoginPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/LoginPage.html
@@ -48,8 +48,7 @@
                         <div class="control-group">
                             <div class="controls">
                                 <label class="checkbox">
-                                    <input id="_spring_security_remember_me" name="_spring_security_
-                       remember_me" type="checkbox" value="true">
+                                    <input id="_spring_security_remember_me" name="_spring_security_remember_me" type="checkbox" value="true"/>
                                     <wicket:message key="remember.me"></wicket:message>
                                 </label>
                                 <button wicket:id="login" type="submit" class="btn">
