#100: Implement fiscal years and their limitations and small UI improvements

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.html
@@ -49,7 +49,7 @@
                         <td>
                             <wicket:message key="finance.account.reverse"></wicket:message>
                         </td>
-                        <td></td>
+                        <td><wicket:message key="vatType"></wicket:message></td>
                         <td>
                             <wicket:message key="text"></wicket:message>
                         </td>
