#142: Remove book chosen button from bookeeping page

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.html
@@ -80,7 +80,7 @@
                 <table>
                     <tr>
                         <td>
-                            <input wicket:id="bookChosen" class="btn btn-success" type="submit" value="bookChosen"/>
+                            <!--<input wicket:id="bookChosen" class="btn btn-success" type="submit" value="bookChosen"/>-->
                             <input wicket:id="bookAll" class="btn btn-success" type="submit" value="bookAll"/>
                         </td>
                     </tr>
