--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/FinanceAccountsPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/reports/FinanceAccountsPage.html
@@ -34,16 +34,20 @@
                 <td>
                     <wicket:message key="accountTo"></wicket:message>
                 </td>
+
+                <td class="span3">
+                    <wicket:message key="hide.accounts.without.transactions"></wicket:message>
+                </td>
                 <td class="span3">
                     <wicket:message key="hide.accounts.without.sum"></wicket:message>
                 </td>
-                <td class="span3"></td>
             </tr>
             <tr>
                 <td><input class="span2" wicket:id="accountFrom" id="accountFrom" type="hidden"/></td>
                 <td><input class="span2" wicket:id="accountTo" id="accountTo" type="hidden"/></td>
+
+                <td class="span3"><input wicket:id="hideAccountsWithOutTransactions" type="checkbox"/></td>
                 <td class="span3"><input wicket:id="hideAccountsWithOutSum" type="checkbox"/></td>
-                <td class="span3"></td>
             </tr>
             <tr>
                 <td colspan="4"><br></td>
