--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.html
@@ -92,7 +92,7 @@
 
     <div class="row">
         <div class="span10">
-            <table class="table" cellspacing="0" wicket:id="chartOfFinancePostings">[table]</table>
+            <table class="table table-bordered" cellspacing="0" wicket:id="chartOfFinancePostings">[table]</table>
         </div>
     </div>
 
