#176: Design tables better, headline, sum, and category should be bigger text.

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.html
@@ -61,7 +61,7 @@
         </table>
     </form>
 
-    <table class="table" cellspacing="0" wicket:id="chartOfAccounts">[table]</table>
+    <table class="table table-condensed table-bordered" cellspacing="0" wicket:id="chartOfAccounts">[table]</table>
 
 </wicket:extend>
 
