#29 Add modal confirmation dialog to clear daily ledger

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.html
@@ -82,7 +82,12 @@
                         <td>
                             <!--<input wicket:id="bookChosen" class="btn btn-success" type="submit" value="bookChosen"/>-->
                             <input wicket:id="bookAll" class="btn btn-success" type="submit" value="bookAll"/>
+
+
                             <input wicket:id="clear.daily.ledger" class="btn btn-danger" type="submit" value="clear.daily.ledger"/>
+
+                            <div wicket:id="are.you.sure"></div>
+
                         </td>
                     </tr>
                 </table>
