#32 Update prices to reflect multiple business units

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/BaseDataPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/BaseDataPage.html
@@ -69,7 +69,7 @@
             <div class="controls">
 
                 <input wicket:id="save" class="btn btn-success" type="submit" value="save"/>
-                <input wicket:id="new" class="btn btn-info" type="submit" value="new"/>
+                <input wicket:id="new" class="btn btn-info" type="submit" value="new"/> <wicket:message key="new.billing.text"></wicket:message>
                 <input wicket:id="delete" class="btn btn-danger" type="submit" value="delete"/>
 
             </div>
