--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/HomePage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/HomePage.html
@@ -13,22 +13,17 @@
         <div class="row">
             <div class="span5">
 
+                <br><br>
+                <img wicket:id="logo" width="470"/>
+                <br><br><br>
 
-                <!-- Jumbotron -->
-                <div class="jumbotron">
-                    <h2>
-                        <wicket:message key="eazy.regnskab"></wicket:message>
-                        !
-                    </h2>
-
-                    <p class="lead">
-                        <wicket:message key="lead.text"></wicket:message>
-                        .
-                    </p>
+                <p align="center">
                     <a wicket:id="signUp" class="btn btn-large btn-success" href="#">
                         <wicket:message key="get.started.today"></wicket:message>
                     </a>
-                </div>
+                </p>
+            </div>
+            <div class="span1">
             </div>
             <div class="span5">
 
