#15 Export finance accounts to excel

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.html
@@ -7,22 +7,23 @@
 
     <form wicket:id="financeAccountEdit" class="form-inline">
 
+
         <table class="table">
             <tr>
                 <th>
-                    <wicket:message key="accountNumber"></wicket:message>
+                    <wicket:message key="ChartOfAccountsPage.accountNumber"></wicket:message>
                 </th>
                 <th>
-                    <wicket:message key="name"></wicket:message>
+                    <wicket:message key="ChartOfAccountsPage.name"></wicket:message>
                 </th>
                 <th>
-                    <wicket:message key="vatType"></wicket:message>
+                    <wicket:message key="ChartOfAccountsPage.vatType"></wicket:message>
                 </th>
                 <th>
-                    <wicket:message key="financeAccountType"></wicket:message>
+                    <wicket:message key="ChartOfAccountsPage.financeAccountType"></wicket:message>
                 </th>
                 <th>
-                    <wicket:message key="standard.reverse.finance.account"></wicket:message>
+                    <wicket:message key="ChartOfAccountsPage.standard.reverse.finance.account"></wicket:message>
                 </th>
             </tr>
             <tr>
@@ -36,7 +37,7 @@
             <tr>
                 <td colspan="2"></td>
                 <td>
-                    <wicket:message key="locked"></wicket:message>
+                    <wicket:message key="ChartOfAccountsPage.locked"></wicket:message>
                 </td>
                 <td>
                     <span wicket:id="sumFromLabel"></span>
