--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/FiscalYearPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/FiscalYearPage.html
@@ -10,10 +10,10 @@
         <table class="table">
             <tr>
                 <th>
-                    <wicket:message key="start"></wicket:message>
+                    <wicket:message key="FiscalYearPage.start"></wicket:message>
                 </th>
                 <th>
-                    <wicket:message key="end"></wicket:message>
+                    <wicket:message key="FiscalYearPage.end"></wicket:message>
                 </th>
                 <th></th>
             </tr>
