--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage.html
@@ -10,16 +10,16 @@
         <table class="table">
             <tr>
                 <th>
-                    <wicket:message key="name"></wicket:message>
+                    <wicket:message key="VatTypesPage.name"></wicket:message>
                 </th>
                 <th>
-                    <wicket:message key="percentage"></wicket:message>
+                    <wicket:message key="VatTypesPage.percentage"></wicket:message>
                 </th>
                 <th>
-                    <wicket:message key="finance.account"></wicket:message>
+                    <wicket:message key="VatTypesPage.finance.account"></wicket:message>
                 </th>
                 <th>
-                    <wicket:message key="finance.account.reverse"></wicket:message>
+                    <wicket:message key="VatTypesPage.finance.account.reverse"></wicket:message>
                 </th>
             </tr>
             <tr>
