--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage.html
@@ -11,7 +11,7 @@
 
         <div class="control-group">
             <label class="control-label" for="name">
-                <wicket:message key="name"></wicket:message>
+                <wicket:message key="DailyLedgerPage.name"></wicket:message>
             </label>
 
             <div class="controls">
@@ -21,7 +21,7 @@
 
         <div class="control-group">
             <label class="control-label" for="nextBookingNumber">
-                <wicket:message key="nextBookingNumber"></wicket:message>
+                <wicket:message key="DailyLedgerPage.nextBookingNumber"></wicket:message>
             </label>
 
             <div class="controls">
@@ -30,7 +30,7 @@
         </div>
         <div class="control-group">
             <label class="control-label" for="financeAccount">
-                <wicket:message key="financeAccount"></wicket:message>
+                <wicket:message key="DailyLedgerPage.financeAccount"></wicket:message>
             </label>
 
             <div class="controls">
