#30 Ingen konti fundet med de valgte argumenter - vises selv om der er konti

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.html
@@ -87,7 +87,7 @@
 
 
                             <input wicket:id="clear.daily.ledger" class="btn btn-danger" type="submit"
-                                   value="clear.daily.ledger"/>
+                                   value="BookkeepingPage.clear.daily.ledger"/>
 
                             <div wicket:id="are.you.sure"></div>
 
