#49 Add header title to datatable exports

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage.html
@@ -50,7 +50,7 @@
 
     </form>
 
-    <table class="table" cellspacing="0" wicket:id="chartOfDailyLedgers">[table]</table>
+    <!--<table class="table" cellspacing="0" wicket:id="chartOfDailyLedgers">[table]</table>-->
 
 </wicket:extend>
 
