--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage.html
@@ -40,7 +40,7 @@
         </table>
     </form>
 
-    <table class="table" cellspacing="0" wicket:id="chartOfVatTypes">[table]</table>
+    <!--<table class="table" cellspacing="0" wicket:id="chartOfVatTypes">[table]</table>-->
 
 </wicket:extend>
 
