#49 Add header title to datatable exports

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.html
@@ -99,11 +99,11 @@
     </div>
 
 
-    <!--<div class="row">-->
-    <!--<div class="span10">-->
-    <!--<table class="table table-bordered" cellspacing="0" wicket:id="chartOfFinancePostings">[table]</table>-->
-    <!--</div>-->
-    <!--</div>-->
+    <div class="row">
+        <div class="span10">
+            <table class="table table-bordered" cellspacing="0" wicket:id="chartOfFinancePostings">[table]</table>
+        </div>
+    </div>
 
 </wicket:extend>
 
