--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.html
@@ -62,7 +62,7 @@
         </table>
     </form>
 
-    <!--<table class="table table-condensed table-bordered" cellspacing="0" wicket:id="chartOfAccounts">[table]</table>-->
+    <table class="table table-condensed table-bordered" cellspacing="0" wicket:id="chartOfAccounts">[table]</table>
 
 </wicket:extend>
 
