--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/FiscalYearPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/FiscalYearPage.html
@@ -32,7 +32,7 @@
         </table>
     </form>
 
-    <!--<table class="table" cellspacing="0" wicket:id="chartOfFiscalYears">[table]</table>-->
+    <table class="table" cellspacing="0" wicket:id="chartOfFiscalYears">[table]</table>
 
 </wicket:extend>
 
